Idempotancy changes
